# mission-framework

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  LESSONS.md  LICENSE  README.md  SPEC.md  console.bat  dashboard.bat  pyproject.toml  requirements.txt  setup.ps1
examples/: manifest.example.json  manifest.json
examples/contracts/: deploy-dry-run.md
harness/: cli.py  config.py  console.py  dashboard.py  quota.py  runner.py  skills.py
harness/prompts/: 0-contract.md  1-orchestrator.md  2-worker.md  3-validator.md  4-handoff.md  5-orchestrator-resolve.md  6-validator-functional.md
harness/providers/: __init__.py  base.py  claude_cli.py  codex_cli.py  gemini_oauth.py  minimax_token.py
harness/skills_seed/: claude-cli-headless.md  flask-stdlib-json-server.md  minimax-tool-calling.md
harness/souls/: orchestrator.md  validator-functional.md  validator.md  worker.md
scripts/: probe_codex_models.py  test_disk_diff_guard.py  test_files_to_write.py  test_gemini_parity.py  test_mission_ledger.py  test_parallel_scheduling.py  test_patch_file.py  test_subtask_scope.py
