[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-framework"
version = "0.1.0"
description = "Cross-model multi-agent harness with quota-aware failover. Uses your subscription/OAuth logins (Claude, Codex, Gemini, Minimax) — no API keys."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "mission-framework contributors"}]
keywords = ["agent", "llm", "claude", "codex", "gemini", "minimax", "multi-agent", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "textual>=0.85",   # interactive TUI console
    "rich>=13.7",      # pulled in by textual but pinned for the dashboard command
]

[project.urls]
Homepage = "https://github.com/peterctwang/mission-framework"
Issues = "https://github.com/peterctwang/mission-framework/issues"

[project.scripts]
mission = "harness.cli:main"

[tool.setuptools]
packages = ["harness", "harness.providers"]
include-package-data = true

[tool.setuptools.package-data]
harness = ["souls/*.md", "prompts/*.md"]
